--- a/userprofile/templates/userprofile/profile.html
+++ b/userprofile/templates/userprofile/profile.html
@@ -1,9 +1,15 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load staticfiles %}
 {% load course %}
 
 {% block title %}{% trans "Profile" %} | {{ block.super }}{% endblock %}
 {% block view_tag %}profile{% endblock %}
+
+{% block scripts %}
+{{ block.super }}
+<script src="{% static 'userprofile/local_storage_external_services.js' %}"></script>
+{% endblock %}
 
 {% block content %}
 <div class="page-header">
@@ -71,6 +77,17 @@
             them on your identity provider.
             {% endblocktrans %}
         </div>
+		<div class="well">
+			<h4>{% trans "Automatic service redirections" %}</h4>
+			<p>
+				{% blocktrans %}
+				These are all services that you have marked for automatic redirection on this device.
+				You can remove automatic redirection here and you will be shown the privacy information next time you are being redirected to the service.
+				{% endblocktrans %}
+			</p>
+			<ul class="local-storage-fields" data-forget-text="{% trans "Forget automatic redirection" %}"></ul>
+			</dd>
+		</div>
     </div>
     <div class="col-md-4">
 
