--- a/userprofile/templates/userprofile/privacy.html
+++ b/userprofile/templates/userprofile/privacy.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}{% trans "Privacy Policy" %} | {{ block.super }}{% endblock %}
+{% block title %}{% trans "Privacy Notice" %} | {{ block.super }}{% endblock %}
 
 {% block content %}
 
 <div class="page-header">
-    <h1>{% trans "Privacy Policy" %}</h1>
+    <h1>{% trans "Privacy Notice" %}</h1>
 </div>
 
 <div class="row">
     <div class="col-md-8">
         <div class="well well-lg">
-            {{ policy_text|safe }}
+            {{ privacy_text|safe }}
         </div>
     </div>
 </div>
