Use bootstrap styles for language box in profile

--- a/userprofile/templates/userprofile/profile.html
+++ b/userprofile/templates/userprofile/profile.html
@@ -32,20 +32,24 @@
             <dd><input value="{{ profile.api_token }}" class="form-control"></dd>
 			<dt>{% trans "Language" %}</dt>
 			<dd>
-			<form action="{% url 'set_language' %}" method="post">{% csrf_token %}
-				    <input name="next" type="hidden" value="{{ redirect_to }}" />
-					    <select class="" name="language">
-					        {% get_current_language as LANGUAGE_CODE %}
-					        {% get_available_languages as LANGUAGES %}
-					        {% get_language_info_list for LANGUAGES as languages %}
-					        {% for language in languages %}
-					            <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
-						            {{ language.name_local }} ({{ language.code }})
-					            </option>
-					        {% endfor %}
-					    </select>
-						<button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
-			</form>
+				<form action="{% url 'set_language' %}" method="post" class="form">{% csrf_token %}
+					<input name="next" type="hidden" value="{{ redirect_to }}">
+					<div class="input-group">
+						<select name="language" class="form-control">
+							{% get_current_language as LANGUAGE_CODE %}
+							{% get_available_languages as LANGUAGES %}
+							{% get_language_info_list for LANGUAGES as languages %}
+							{% for language in languages %}
+								<option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %}selected{% endif %}>
+									{{ language.name_local }}
+								</option>
+							{% endfor %}
+						</select>
+						<div class="input-group-btn">
+							<button type="submit" class="btn btn-primary">{% trans 'Save' %}</button>
+						</div>
+					</div>
+				</form>
 			</dd>
         </dl>
     </div>
