Implement language-changing links

--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -66,6 +66,9 @@
 <script src="{% static 'exercise/poll.js' %}"></script>
 <script src="{% static 'exercise/group.js' %}"></script>
 <script src="{% static 'exercise/chapter.js' %}"></script>
+<script
+    src="{% static 'exercise/language_link.js' %}"
+    data-set-lang="{% url 'set_language' %}"></script>
 <script>
 // Visualize loading in case of slow POST operations.
 /*$(function() {
