Rewrite link and LTI services with GDPR in mind.

--- a/external_services/templates/external_services/external_service_redirect.html
+++ b/external_services/templates/external_services/external_service_redirect.html
@@ -13,7 +13,7 @@
 {% block scripts %}
 {{ block.super }}
 <script src="{% static 'js/external_launcher.js' %}"></script>
-</script>
+<link rel="stylesheet" type="text/css" href="{% static 'css/external_services.css' %}">
 {% endblock %}
 
 {% block coursecontent %}
