--- a/templates/base.html
+++ b/templates/base.html
@@ -107,15 +107,17 @@
                             {% if user.is_authenticated %}
                             {% group_select %}
                             {% notification_menu %}
-                            <li class="dropdown">
+                            <li role="presentation" class="profile-menu dropdown">
                               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                 <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                                 {{ user.first_name }} {{ user.last_name }} <span class="caret"></span>
                               </a>
                               <ul class="dropdown-menu">
-                                <li><a href="{% url 'profile' %}">{% trans "Profile" %}</a></li>
+                                <li role="presentation">
+                                    <a href="{% url 'profile' %}">{% trans "Profile" %}</a>
+                                </li>
                                 <li role="separator" class="divider"></li>
-                                <li>
+                                <li role="presentation">
                                   <a href="{% url 'logout' %}">
                                     <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
                                     {% trans "Log out"%}
