--- a/exercise/templates/exercise/staff/_assess_info.html
+++ b/exercise/templates/exercise/staff/_assess_info.html
@@ -53,13 +53,17 @@
                   {% endfor %}
                 </ol>
 
-                {% trans "In total" %}
-                {{ summary.get_submission_count }}{% if exercise.max_submissions %}
-                / {{ exercise|max_submissions:submission.submitters.first }}{% if is_teacher %}
-                <form method="post" action="{{ submission|url:'submission-increase-max' }}" style="display:inline;" title="{% trans 'Add one extra submission for the student in this exercise.' %}">
-              		{% csrf_token %}
-              		<input class="btn btn-xs btn-primary" type="submit" value="+1" />
-              	</form>{% endif %}{% endif %}
+				{% trans "In total" %}
+				{{ summary.get_submission_count }}
+				{% if exercise.max_submissions %}
+					/ {{ exercise|max_submissions:submission.submitters.first }}
+					{% if is_teacher or is_assistant and submission.exercise.allow_assistant_grading %}
+						<form method="post" action="{{ submission|url:'submission-increase-max' }}" style="display:inline;" title="{% trans 'Add one extra submission for the student in this exercise.' %}">
+							{% csrf_token %}
+							<input class="btn btn-xs btn-primary" type="submit" value="+1" />
+						</form>
+					{% endif %}
+				{% endif %}
             </dd>
         </dl>
 
