--- a/exercise/templates/exercise/staff/assess_submission.html
+++ b/exercise/templates/exercise/staff/assess_submission.html
@@ -19,7 +19,7 @@
 </div>
 <div class="col-md-7">
     <h3>{% trans "Assessment" %}</h3>
-    <div class="well">
+    <div class="well assistant-feedback">
         <form method="post" role="form">
             {% csrf_token %}
             {{ form|bootstrap }}
