--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -44,7 +44,7 @@
                     {% include 'exercise/_warnings_overlay.html' %}
                 {% endif %}
 
-                {% if exercisecollection %}
+                {% if exercisecollection_data %}
                     {% include 'exercise/_exercisecollection.html' %}
 
                 {% elif exercise.is_submittable %}
