--- a/course/templates/course/course.html
+++ b/course/templates/course/course.html
@@ -1,6 +1,5 @@
 {% extends "course/course_base.html" %}
 {% load i18n %}
-{% load course %}
 {% load exercise %}
 {% load news %}
 {% load apps %}
@@ -10,42 +9,7 @@
 
 {% block coursecontent %}
 
-{% if not is_student %}
-<div class="alert alert-info">
-{% if enrollable or is_course_staff %}
-  {% if instance.is_enrollment_open %}
-  <form method="post" action="{{ instance|url:'enroll' }}">
-    {% csrf_token %}
-    {% if instance.view_content_to > 1 %}
-    {% trans "In order to submit exercises you must enroll in the course." %}
-    {% else %}
-    {% trans "In order to submit exercises and see material, you must enroll in the course." %}
-    {% endif %}
-    <input type="submit" value="{% trans 'Enroll' %}" class="btn btn-info">
-    {% if instance.enrollment_ending_time %}
-    <div>
-      <small>
-        {% blocktrans with end=instance.enrollment_ending_time %}
-        The course enrollment is open until {{ end }}.
-        {% endblocktrans %}
-      </small>
-    </div>
-    {% endif %}
-  </form>
-  {% elif instance.has_enrollment_closed %}
-  {% trans "Unfortunately, enrolling in the course has ended." %}
-  {% else %}
-  {% blocktrans with start=instance.enrollment_start end=instance.enrollment_end %}
-  The course opens {{ start }}.
-  {% endblocktrans %}
-  {% endif %}
-{% elif profile %}
-  {% trans "Unfortunately, you cannot enroll in this course, but you may explore the course material." %}
-{% else %}
-  {% trans "Login is required to submit exercises, but you may anonymously explore the course material." %}
-{% endif %}
-</div>
-{% endif %}
+{% include "course/_enroll_form.html" %}
 
 <div class="index">
   {{ instance.description|safe }}
