No access to model solutions during personal deadline extensions
Bug fix: Student must not be able to open exercise model
solutions while he may submit and gain points.
Previously, students could open model solutions after the module
deadline even if they had personal deadline extensions.

Model solution link is shown in templates without checking
personal extensions in order to save database queries.

--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -63,7 +63,10 @@
               {% endfor %}
           </ul>
       </li>
-      {% if is_course_staff or is_student and exercise.can_show_solutions %}
+      {% if is_course_staff or is_student and exercise.can_show_model_solutions %}
+      {% comment %} The model solution link is shown even if the student can not
+      open it due to personal extensions. However, this saves some database queries.
+      {% endcomment %}
       {% if exercise.model_answers %}
       <li class="menu-model">
         <a href="{{ exercise|url:'exercise-model' }}">
