Fix unofficial submissions when exceeding the submission limit
Previously, students could submit unofficially after exceeding
the exercise max submissions limit even if the exercise category
did not allow unofficial submissions. This has been fixed.
Additionally, the course archive time is checked in this scenario.

Unofficial submissions can be made even while the module is open
if the student exceeds the submission limit and the category allows
unofficial submissions.

The aplus settings.py has a new setting for defining max allowed
submissions for unofficial submissions. This is useful if students
try to crash the server by submitting huge numbers of times since
unofficial submissions are not restricted by the normal exercise
max submissions limit.

--- a/exercise/templates/exercise/_points_badge.html
+++ b/exercise/templates/exercise/_points_badge.html
@@ -8,7 +8,7 @@
 {% elif confirm_the_level %}
 {% if submitted %}
 <span class="badge{% if graded and official %} badge-{% if full_score %}success{% elif passed %}warning{% else %}danger{% endif %}{% endif %} {{ classes }}">
-  {% if not official %}{% trans 'Submitted after deadline' %}{% elif passed %}{% trans "Accepted" %}{% elif graded %}{% trans "Rejected" %}{% else %}{% trans "Submitted" %}{% endif %}
+  {% if not official %}{% trans 'Submitted after deadline or exceeded submission limit' %}{% elif passed %}{% trans "Accepted" %}{% elif graded %}{% trans "Rejected" %}{% else %}{% trans "Submitted" %}{% endif %}
 </span>
 {% elif confirmable_points %}
 <span class="badge badge-danger" data-toggle="tooltip" title="{% trans 'You must submit here to confirm your points. Submissions are accepted even after the deadline.' %}">
@@ -26,7 +26,7 @@
 {% endif %}
 <span class="badge{% if submitted and official %} {% if full_score %}badge-success{% elif passed %}badge-warning{% else %}badge-danger{% endif %}{% if unconfirmed %} unconfirmed-points{% endif %}{% endif %}{% if classes %} {{ classes }}{% endif %}"
         data-toggle="tooltip" data-placement="bottom"
-        title="{% if not official %}{% trans 'Submitted after deadline' %}{% elif passed %}{% if required > 0 %}{% trans 'Passed' %}{% endif %}{% elif missing_points %}{% blocktrans with points=required %}{{ points }} points required to pass{% endblocktrans %}{% elif submitted %}{% trans 'Required exercises are not passed' %}{% endif %}">
+        title="{% if not official %}{% trans 'Submitted after deadline or exceeded submission limit' %}{% elif passed %}{% if required > 0 %}{% trans 'Passed' %}{% endif %}{% elif missing_points %}{% blocktrans with points=required %}{{ points }} points required to pass{% endblocktrans %}{% elif submitted %}{% trans 'Required exercises are not passed' %}{% endif %}">
     {{ points }} / {{ max }}
 </span>
 {% endif %}
