--- a/exercise/templates/exercise/_exercise_info.html
+++ b/exercise/templates/exercise/_exercise_info.html
@@ -21,7 +21,7 @@
             {% endif %}
             {% if summary.is_unofficial %}
             <span class="badge">
-                {% trans "Unofficial" %}
+                {% trans "No points gained" %}
             </span>
             {% endif %}
         </small>
