Upgrade to Django 2.1
{% load staticfiles %} and {% load admin_static %} are deprecated
in favor of {% load static %}, which works the same.

--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -1,6 +1,6 @@
 {% extends "exercise/exercise_base.html" %}
 {% load i18n %}
-{% load staticfiles %}
+{% load static %}
 {% load course %}
 
 {% block view_tag %}exercise{% endblock %}
