--- a/exercise/templates/exercise/staff/list_submissions.html
+++ b/exercise/templates/exercise/staff/list_submissions.html
@@ -1,6 +1,6 @@
 {% extends "exercise/exercise_base.html" %}
 {% load i18n %}
-{% load staticfiles %}
+{% load static %}
 
 {% block title %}{% trans "All submissions" %} | {{ block.super }}{% endblock %}
 {% block view_tag %}all-submissions{% endblock %}
