--- a/external_services/templates/external_services/launch.html
+++ b/external_services/templates/external_services/launch.html
@@ -1,6 +1,6 @@
 {% extends "course/course_base.html" %}
 {% load i18n %}
-{% load staticfiles %}
+{% load static %}
 {% load course %}
 
 {% block title %}{{ service.menu_label|parse_localization }} | {{ block.super }}{% endblock %}
