New Shibboleth authentication
* Dictionary style settings for shibboleth configuration
* Implement a parser for shib2 encoded multivalue fields.
* Parse only a single student number, based on a config value
* Authentication backend is rewritten, but should be more robust
  and handle problems better than before.
  e.g. before, oo long input values were just cut, and thus multiple
  different inputs might have resulted same output.
  Now we raise errors instead and require someone to fix the actual
  problem.
* Better debug output.. So we can actually find out these problems :)

--- a/shibboleth_login/templates/shibboleth/meta.html
+++ b/shibboleth_login/templates/shibboleth/meta.html
@@ -1,16 +1,64 @@
 <html>
-	<head>
-		<title>Shibboleth Debug</title>
-	</head>
-	<body>
-		<p>META</p>
-		<table>
-		  {% for name,value in meta_data %}
-		  <tr>
-		  	<td>{{ name }}</td>
-		  	<td>{{ value }}</td>
-		  </tr>
-		  {% endfor %}
-		</table>
-	</body>
+<head>
+	<title>Shibboleth Debug</title>
+	<style>
+		table {
+			border-collapse: collapse;
+		}
+		table, th, td {
+			border: 1px solid black;
+			text-align: left;
+		}
+		ul {
+			list-style: square inside;
+			margin-block-start: 0;
+			margin-block-end: 0;
+			margin-inline-start: 0;
+			margin-inline-end: 0;
+			padding-inline-start: 0;
+		}
+	</style>
+</head>
+<body>
+	<p>Shibboleth variables</p>
+	<table>
+	{% for name, values in shib_meta %}
+		<tr>
+			<th>{{ name }}</th>
+			<td>
+			{% if not values %}
+			{% elif values|length == 1 %}
+				{{ values.0 }}
+			{% else %}
+				<ul>
+				{% for value in values %}
+					<li>{{ value }}</li>
+				{% endfor %}
+				</ul>
+			{% endif %}
+			</td>
+		</tr>
+	{% endfor %}
+	</table>
+
+	<p>Headers</p>
+	<table>
+	{% for name, value in headers %}
+		<tr>
+			<th>{{ name }}</th>
+			<td>{{ value }}</td>
+		</tr>
+	{% endfor %}
+	</table>
+
+	<p>request.META</p>
+	<table>
+	{% for name, value in meta %}
+		<tr>
+			<th>{{ name }}</th>
+			<td>{{ value }}</td>
+		</tr>
+	{% endfor %}
+	</table>
+</body>
 </html>
