Filtering with comparison operators and regex. Filtering move to seperate file named filter.js.

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,7 @@
             hreflang="fi"
             href="{{ STATIC_URL }}js-translations/teacher.fi.json"
         >
+        <script src="{% static 'js/filter.js' %}"></script>
         {% endif %}
 
         {% block js-translations %}
