--- a/exercise/templates/exercise/staff/_submissions_table.html
+++ b/exercise/templates/exercise/staff/_submissions_table.html
@@ -61,7 +61,7 @@
             <td>
                 {% profiles submission.submitters.all instance is_teacher %}
             </td>
-            <td>
+            <td data-datetime="{{ submission.submission_time|date:'Y-m-d H:i' }}">
                 {{ submission.submission_time }}
                 {% if submission.late_penalty_applied %}
                 <span class="label label-warning">
