Create logic to choose exammode templates. Improve exammode templates.

--- a/exammode/templates/exammode/course_exam_base.html
+++ b/exammode/templates/exammode/course_exam_base.html
@@ -151,7 +151,7 @@
                             {% group_select %}
                             {% notification_menu %}
                             <li role="presentation" class="profile-menu dropdown">
-                                <a href="#">{{ user.student_id }} {{ user.first_name }} {{ user.last_name }}</span>
+                                <a href="#">{{ user.userprofile.student_id }} {{ user.first_name }} {{ user.last_name }}</span>
                             </li>
                         </ul>
 
