--- a/exammode/templates/exammode/exam.html
+++ b/exammode/templates/exammode/exam.html
@@ -160,8 +160,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/external_services.css' %}">
     <script src="{% static 'exercise/poll.js' %}"></script>
     <script src="{% static 'exercise/group.js' %}"></script>
-    <script src="{% static 'exammode/js/chapter.js' %}" ></script>
-    <script src="{% static 'exammode/js/badge.js' %}"></script>
+    <script src="{% static 'exercise/chapter.js' %}" ></script>
     <script
         src="{% static 'exercise/language_link.js' %}"
         data-set-lang="{% url 'set_language' %}"></script>
