--- a/exammode/templates/exammode/base.html
+++ b/exammode/templates/exammode/base.html
@@ -125,36 +125,33 @@
                 {% site_alert %}
                 {% include "_messages.html" %}
                 {% block content %}
-                    <div data-taggings="{{ get_taggings|join:' ' }}"  class="row">
-                        <div class="col-sm-12">
-                            <div class="row">
-                                {% block columns %}
-                                <div class="col-lg-9">
-                                    {% block coursecontent %}
-                                    {% endblock %}
-                                </div>
-                                <div class="col-lg-3">
-                                    {% block sidecontent %}
-                                    {% endblock %}
-                                </div>
+                <div data-taggings="{{ get_taggings|join:' ' }}" class="row">
+                    <div class="col-sm-12">
+                        <div class="row">
+                            {% block columns %}
+                            <div class="col-lg-9">
+                                {% block coursecontent %}
                                 {% endblock %}
                             </div>
-                        </div>
-                        <div class="col-lg-3">
-                            {% block sidecontent %}
+                            <div class="col-lg-3">
+                                {% block sidecontent %}
+                                {% endblock %}
+                            </div>
                             {% endblock %}
                         </div>
                     </div>
+                </div>
                 {% endblock %}
             </div>
         </div>
-        <div id="page-modal" class="modal" role="dialog">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-                    <div class="modal-progress">
-                      <div class="progress">
-                        <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%" data-msg-error="{% trans 'Loading failed!' %}">
-                          {% trans "Loading..." %}
+    <div id="page-modal" class="modal" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-progress">
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%"
+                            data-msg-error="{% trans 'Loading failed!' %}">
+                            {% trans "Loading..." %}
                         </div>
                       </div>
                     </div>
