--- a/exammode/templates/exammode/exam_start.html
+++ b/exammode/templates/exammode/exam_start.html
@@ -1,17 +1,28 @@
 {% extends "exammode/base.html" %}
 
 {% block content %}
-<h1>List of active exams</h1>
-{% if active_exams %}
-<ul>
-    {% for exam in active_exams %}
-    <div class="container">
-        {{exam.course_instance.course}} {{exam.can_start}}
-        <a class="btn btn-success" href="{% url 'exam_details' exam.id %}">Start exam</a>
-    </div>
-    {% endfor %}
-</ul>
-{% else %}
-<p>There are no active exams at the moment.</p>
-{% endif %}
+<div class="text-center">
+    <h1>List of active exams</h1>
+    <br style="line-height: 2;">
+    {% if active_exams %}
+    <ul class="list-unstyled">
+        {% for exam in active_exams %}
+        <li>
+            <p style="display: inline-block;">
+                {{exam.course_instance.course}}
+                <br>{{exam.can_start}}
+            </p>
+
+            <a style="display: inline-block; vertical-align: top;" 
+               class="btn btn-success" 
+               href="{% url 'exam_details' exam.id %}">
+                Start exam
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
+    {% else %}
+    <p>There are no active exams at the moment.</p>
+    {% endif %}
+</div>
 {% endblock %}
