Combine data from previous enrollment exercise submissions
When an enrollment exercise is opened, read all enrollment
exercise submissions of the user from the database.
Their submission data is combined.
It is then possible to prefill enrollment questionnaire
forms on other courses if they use a similar questionnaire as
a course that the student has already enrolled in.
The enrollment questionnaire form may be pre-filled by
frontend JavaScript. The backend embeds the necessary submission
data in the enrollment exercise page as a JSON dump.

The latest enrollment submission data available in the
HTML template is restricted so that it only contains form keys
that are also used by the exercise to be opened
(based on exercise_info.form_spec).

--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -25,6 +25,9 @@
         {% endif %}
     {% endif %}
 >
+  {% if latest_enrollment_submission_data %}
+    {{ latest_enrollment_submission_data|json_script:"enroll-submission-data" }}
+  {% endif %}
   <div class="overlay-parent">
     {% if issues and not submission_allowed %}
         {% include 'exercise/_warnings_overlay.html' %}
