--- a/exammode/templates/exammode/exam_start.html
+++ b/exammode/templates/exammode/exam_start.html
@@ -9,8 +9,8 @@
         {% for exam in active_exams %}
         <li>
             <p style="display: inline-block;">
-                {{exam.course_instance.course}}
-                <br>{{exam.can_start}}
+                <b>{{exam.course_instance.course}}
+                <br>{{exam.can_start}}</b>
             </p>
 
             <a style="display: inline-block; vertical-align: top;" 
